Adicionando reset.css, pasta imagens, e atualizando o style.css e index.html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Blog</title>
+    <title>Curriculum Vitae</title>
 </head>
 
 <body>
+    <div class="site">
+        <header>
+            <h1 class="logo"><a href="index.html">Curriculum Vitae</a></h1>
+            <h2 class="header_h2">Curriculum Vitae</h2>
+            <nav>
+                <ul class="menu">
+                    <li class="menu__item"><a href="#dados_pessoais">Dados Pessoais</a></li>
+                    <li class="menu__item"><a href="#formacao">Formação</a></li>
+                    <li class="menu__item"><a href="#experiencias">Experiência</a></li>
+                    <li class="menu__item"><a href="#habilidades">Habilidades</a></li>
 
+                </ul>
+            </nav>
+
+        </header>
+
+        <main>
+            <section>
+                <header>
+                    <h2 id="dados_pessoais">Dados Pessoais</h2>
+
+                </header>
+            </section>
+            <section>
+                <header>
+                    <h2 id="formacao">Formação</h2>
+
+                </header>
+            </section>
+            <section>
+                <header>
+                    <h2 id="experiencias">Experiência</h2>
+
+                </header>
+            </section>
+            <section>
+                <header>
+                    <h2 id="habilidades">Habilidades</h2>
+
+                </header>
+            </section>
+
+        </main>
+
+        <footer>
+
+        </footer>
+    </div>
 </body>
 
 </html>
